--- a/sidebar.css
+++ b/sidebar.css
@@ -19,17 +19,27 @@
 }
 .sidebar{
     padding: 10px;
-    max-width: 20%;
+    width: 20%;
     height: 100%;
     background-color: #0f1729;
+    min-height: 100vh;
     color: #fff;
 }
-ul{
+.sidebar_ul{
     padding: 10px;
     list-style: none;
 }
-li{
+.sidebar_li{
     padding: 10px;
+    color: #ffffffd0;
+}
+.sidebar_li:hover{
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: #3c83f6;
+}
+span{
+    margin: 10px;
 }
 body {
     display: flex;
