prototipo interface concluido
todas as interfaces prototipadas, esperando api para começar integrações.

--- a/CSS/sidebar.css
+++ b/CSS/sidebar.css
@@ -32,6 +32,8 @@
 .sidebar_li{
     padding: 10px;
     color: #ffffffd0;
+    text-decoration: none;
+    list-style: none;
 }
 .sidebar_li:hover{
     border-radius: 10px;
