--- a/CSS/financeiro.css
+++ b/CSS/financeiro.css
@@ -62,6 +62,10 @@ p{
     padding: 10px; 
     border-bottom: solid 1px rgba(0, 0, 0, 0.103); 
 }
+.status ul li:hover{
+    cursor: pointer;
+    color: #024cc4;
+}
 
 .status ul li span{
     float: right;
