--- a/CSS/usuarios.css
+++ b/CSS/usuarios.css
@@ -13,3 +13,29 @@ th{
 td{
     background-color: aliceblue;
 }
+
+.formulario{
+    width: 40%;
+    margin-left: 15%;
+    margin-top: 5%;
+    position:fixed;
+}
+form div{
+    padding: 10px;
+    display: flex;
+}
+form legend{
+    padding: 10px;
+    background-color: rgb(83, 81, 81);
+    color: #fff;
+    border-radius: 20px;
+}
+form fieldset{
+    color: #000 ;
+    padding: 10px;
+    background-color: rgb(119, 115, 115);
+    border-radius: 10px;
+}
+form div label{
+    width: 20%;
+}
